feat: expand profile to portfolio with >1000 words

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ethan Hayes - Senior AV Systems Architect</title>
+    <title>Ethan Hayes - Senior AV Systems Architect | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,25 +14,71 @@
         </header>
 
         <section class="profile">
-            <h2>About Me</h2>
-            <p>A Senior AV Systems Architect with 15 years of experience in crafting bespoke audiovisual environments. My focus is on integrating robust, scalable, and user-centric AV solutions for high-stakes corporate headquarters, command centers, and luxury hospitality venues. I specialize in turning complex requirements into elegant, high-performance systems.</p>
+            <h2>Executive Summary</h2>
+            <p>As a Senior AV Systems Architect with 15 years of dedicated experience, I architect and deliver high-performance audiovisual ecosystems that serve as the central nervous system for modern enterprises. My approach is rooted in a deep understanding of both the technological possibilities and the human-centric needs of a space. I believe that the best technology is invisible, seamlessly integrated into the architecture to enhance communication, foster collaboration, and create immersive experiences. This philosophy drives my commitment to meticulous planning and forward-thinking design, ensuring that every solution is not only powerful and reliable but also intuitive and future-proof. I thrive on solving complex integration puzzles by orchestrating diverse technologies—from control systems and networked audio to unified communications and architectural lighting—into a unified, elegant, and impactful solution. My role extends beyond technical schematics; it's about building relationships with clients, understanding their vision, and translating their strategic goals into a tangible, technological reality that empowers their organization for years to come.</p>
         </section>
 
         <section class="experience">
-            <h2>Core Competencies</h2>
-            <ul>
-                <li>Enterprise AV System Architecture</li>
-                <li>Crestron, Q-SYS & Biamp Programming</li>
-                <li>Networked AV (AV-over-IP, Dante)</li>
-                <li>Unified Communications (UC) Strategy</li>
-                <li>Architectural & Acoustic Integration</li>
-                <li>Client & Stakeholder Management</li>
-            </ul>
+            <h2>Professional Experience</h2>
+            <article>
+                <h3>Senior AV Architect @ Tech-Integrate Solutions</h3>
+                <span>2018 – Present</span>
+                <ul>
+                    <li>Lead the architectural design and strategic planning for enterprise-level AV deployments, including multi-million dollar projects for Fortune 500 clients in the finance, tech, and healthcare sectors.</li>
+                    <li>Develop comprehensive system documentation, including signal flow diagrams, rack elevations, and architectural drawings using AutoCAD and Stardraw, establishing a clear blueprint for installation and support teams.</li>
+                    <li>Program and deploy advanced control systems using Crestron (including DM NVX), Q-SYS, and Biamp, with a strong focus on creating custom, intuitive user interfaces for executive boardrooms and critical operation centers.</li>
+                    <li>Spearheaded the development of company-wide AV standards for a global financial institution, resulting in a 30% reduction in deployment time across new sites and a 15% decrease in post-installation support calls.</li>
+                    <li>Authored detailed technical proposals and statements of work (SOW) for projects valued at over $5 million, consistently achieving a high success rate against top-tier competitors through rigorous and innovative design.</li>
+                </ul>
+            </article>
+            <article>
+                <h3>AV Integration Engineer @ Visionary Media Group</h3>
+                <span>2013 – 2018</span>
+                <ul>
+                    <li>Engineered and managed the end-to-end integration of interactive video walls, digital signage networks, and unified communication platforms for high-profile retail and hospitality clients.</li>
+                    <li>Conducted on-site commissioning, system testing, and provided in-depth, tiered training to end-users and client-side technical staff to ensure successful adoption and operation.</li>
+                    <li>Collaborated closely with architects, interior designers, and construction teams to ensure seamless technology integration into physical spaces, often in challenging and historic landmark buildings.</li>
+                    <li>Developed custom control system modules for Crestron to streamline integration with third-party systems, such as lighting and BMS, reducing programming time by an average of 20% per project.</li>
+                    <li>Received the 'Engineer of the Year' award in 2017 for outstanding technical expertise and client satisfaction on a complex university campus-wide AV upgrade project involving over 100 learning spaces.</li>
+                </ul>
+            </article>
+        </section>
+
+        <section class="experience">
+            <h2>Core Technical Proficiencies</h2>
+            <article>
+                <h3>Control Systems & Automation</h3>
+                <p>Deep expertise in Crestron (DM, NVX, Certified Master Programmer), Q-SYS (Level 2 Certified), and Biamp (TesiraFORTE Certified). Proficient in developing custom, intuitive user interfaces that simplify complex system operations for non-technical users.</p>
+            </article>
+            <article>
+                <h3>Audio & Digital Signal Processing (DSP)</h3>
+                <p>Extensive experience with audio digital signal processing platforms including Biamp Tesira, QSC Q-SYS, and BSS London. Specializing in acoustic analysis, echo cancellation, and designing intelligible audio for challenging environments like lecture halls, all-hands spaces, and conference centers.</p>
+            </article>
+             <article>
+                <h3>Video & Signal Distribution</h3>
+                <p>Mastery of video-over-IP technologies (Crestron NVX, AMX SVSI), HDBaseT, and fiber optic distribution. Expertise in designing and calibrating large-format video walls, multi-window processors, and projection systems for critical viewing applications.</p>
+            </article>
+            <article>
+                <h3>Unified Communications & Collaboration (UC&C)</h3>
+                <p>Certified expert in deploying and integrating platforms like Microsoft Teams Rooms, Zoom Rooms, and Cisco Webex. Focus on creating seamless hybrid meeting experiences with intelligent camera tracking, microphone arrays, and wireless content sharing solutions.</p>
+            </article>
+        </section>
+
+        <section class="experience">
+            <h2>Project Highlights</h2>
+            <article>
+                <h3>Global Finance HQ - New York, NY</h3>
+                <p><strong>Objective:</strong> Design and deploy a state-of-the-art AV solution for a new 50-story corporate headquarters, including an executive briefing center, a broadcast studio, and over 200 standardized conference rooms.<br><strong>Role & Outcome:</strong> As the lead architect, I was responsible for the entire technology lifecycle. The project featured a fully networked Crestron NVX backbone, a campus-wide digital signage system, and standardized Microsoft Teams Rooms. The result was a technologically advanced yet remarkably simple-to-use environment that has become the global standard for the client's subsequent office build-outs, reducing their total cost of ownership significantly.</p>
+            </article>
+            <article>
+                <h3>Luxury Hotel & Casino - Las Vegas, NV</h3>
+                <p><strong>Objective:</strong> Create a visually stunning and immersive audiovisual experience throughout a new luxury resort, encompassing a casino floor, sportsbook, nightclub, and a 2,000-seat theater.<br><strong>Role & Outcome:</strong> I worked as the primary design consultant, collaborating with world-renowned interior designers to integrate technology seamlessly into the opulent architecture. The solution involved hundreds of displays synchronized for large-scale video moments and a Dante-networked audio system delivering zoned content to over 50 areas. The project successfully created a captivating atmosphere that enhanced the guest experience and has been lauded in multiple industry publications.</p>
+            </article>
         </section>
 
         <section class="contact">
             <h2>Get in Touch</h2>
-            <p>Ready to build a state-of-the-art AV environment? Let's connect to discuss your project's vision and technical needs.</p>
+            <p>I am passionate about leveraging technology to solve challenges and create exceptional environments. If you are looking for an architect to design a robust, scalable, and cutting-edge AV system, I would welcome the opportunity to discuss your project's vision. Let's connect to explore how we can bring your ideas to life.</p>
             <p>Explore the possibilities of professional <a href="https://newtechgroup.com/" target="_blank">av integrator services</a>.</p>
         </section>
     </div>
